chathaven/src/components/styles/Dashboard.css
/* ... */
#sidebar::-webkit-scrollbar-thumb {
  background: #668a97;
  border-radius: 4px;
}

#sidebar::-webkit-scrollbar-thumb:hover {
  cursor: pointer;
}

#sidebar::-webkit-scrollbar-track {
  background: #124559;
}

#messageWindow{
  display: flex;
  flex-direction:column;
  transition:width 0.3s ease-in-out;
  width: calc(100% - 440px);
}

#messageWindow.leftClosed{
  left:40px;
  width: calc(100% - 240px);
}

#messageWindow.rightClosed{
  right:0;
  width:calc(100% - 240px);
}

#messageWindow.bothClosed{
  width:calc(100vw - 40px);
}

#messageBar {
    position: fixed;
    bottom: 0;
    left: 240px; 
    right:200px;
    width: calc(100% - 440px);
    height:50px;
    background-color: #f1f1f1;
    display: flex;
    align-items: center;
    padding: 10px;
    border:none;
    transition: left 0.3s ease-in-out, right 0.3s ease-in-out, width 0.3s ease-in-out;
}

#messageBar.leftClosed{
    left:40px;
    width: calc(100% - 240px);
}

#messageBar.rightClosed{
    right:0;
    width: calc(100% - 240px);
}

#messageBar.bothClosed{
    left:40px;
    right:0;
    width:calc(100vw - 40px);
}

#messageBar input {
  font-family: "Comfortaa";
  flex: 1;
  padding: 10px;
  border: none;
  border-radius: 5px;
  outline: none;
}

#messageBar button {
  font-family: "Comfortaa";
  margin-left: 10px;
  padding: 9px 15px;
  background-color: #21647f;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

#messageBar button:hover {
  background-color: #668a97;
  transition: 0.2s ease;
}

#messagesArea{
    margin-left:240px;
    margin-bottom:50px;
    margin-right:200px;
    width:calc(100vw - 440px);
    height: calc(100vh - 50px);
    background-color:#f1f1f1;
    padding:0px;
    overflow-y:auto;
    display:flex;
    flex-direction:column;
    transition: margin-left 0.3s ease-in-out, margin-right 0.3s ease-in-out, width 0.3s ease-in-out;
    scroll-behavior:smooth;
    align-items: flex-start;
}

#messagesArea.leftClosed{
    margin-left:40px;
    width: calc(100vw - 240px);
}

#messagesArea.rightClosed{
    margin-right:0;
    width:calc(100vw - 240px);
}

#messagesArea.bothClosed{
    margin-left:40px;
    margin-right:0;
    width:calc(100vw - 40px);
}
.receivedMessage {
  font-family:"Comfortaa";
  margin: 10px;
  padding: 10px;
  width: 40%;
  background-color: white;
  border-radius: 10px;
  border-bottom-left-radius: 0;
  align-self: flex-start;
  white-space: pre-wrap; 
  word-wrap: break-word; 
  overflow-wrap: break-word;
}

.sentMessage {
  font-family:"Comfortaa";
  margin: 10px;
  padding: 10px;
  width: 40%;
  background-color: #598291;
  color: white;
  border-radius: 10px;
  border-bottom-right-radius: 0;
  align-self: flex-end;
  white-space: pre-wrap; 
  word-wrap: break-word; 
  overflow-wrap: break-word;
}

#directMessagesArea {
  position: absolute;
  bottom: 40px;
  width: 100%;
  background-color: #124559;
  box-shadow: 0 -4px 8px 0 #ffffff13;
  padding: 10px;
  
}

#directMessagesButton {
  background-color: transparent;
  font-family: "Comfortaa";
  border: none;
  color: white;
  font-size: 25px;
  text-align:center;
}

#directMessagesButton:hover{
    transform:scale(1.1);
    cursor:pointer;
}

#logoutButtonArea {
  background-color: #0a2a36;
  width: 40px;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 20px;
}

#logoutButton {
  position:absolute;
  bottom:5px;
  background-color: transparent;
  font-family: "Comfortaa";
  border: none;
  color: white;
  font-size: 25px;
}



#logoutButton:hover {
  cursor: pointer;
  transform:scale(1.1);
}

.menuOverlay {
  font-family: "Comfortaa";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.499);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.menuContent {
  background: #124559;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.121);
  width: 400px;
  text-align: center;
}

.createTeamMenuContent {
  background: #124559;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.121);
  width: 850px;
  text-align: center;
}

.listsContainer {
  display: flex;
  justify-content: space-between;
  gap: 20px;
}

#createTeamHeader {
  font-family: "Panton";
  color: white;
  font-size: 25px;
  margin-bottom: 15px;
}

#teamNameInput {
  line-height: 25px;
  caret-color: white;
  color: white;
  border: none;
  font-family: "Comfortaa";
  background-color: transparent;
  border-bottom: 2px solid #598392;
}

#teamNameInput::placeholder {
  color: white;
}

#teamNameInput:focus {
  outline: none;
}

#teamNameInput option{
  color:black;
}

.selectMembersText{
    color:white;
    text-align:left;
    margin-top:15px;

}

#noteText {
  color: white;
  font-size: 13px;
  background-color: #165169;
  padding: 5px;
  border-radius: 15px;
  margin-top: 10px;
}

.userList {
  flex: 1;
  height: 300px;
  overflow-y: auto;
  text-align: left;
  margin-top: 10px;
  color: rgb(29, 28, 28);
  background-color: white;
  padding: 10px;
  border-radius: 10px;
}

.userList::-webkit-scrollbar {
  width: 8px;
}

.userList::-webkit-scrollbar-thumb {
  background: #668a97;
  border-radius: 4px;
}

.userList::-webkit-scrollbar-thumb:hover {
  cursor: pointer;
}

.userList::-webkit-scrollbar-track {
  background: #165169;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}

.user {
  margin-top: 10px;
}


.name{
    font-family:"Panton";
    font-size:20px;
    margin-left:5px;
}

.email{
    color:rgb(58, 58, 58);

}
.checkbox {
  width: 20px;
}

.button {
  font-family: "Comfortaa";
  border-radius: 10px;
  margin: 10px;
  padding: 10px;
  margin-top: 20px;
  border: none;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.21);
}

.button:hover {
  background-color: rgb(181, 181, 181);
  cursor: pointer;
  transition: 0.3s ease;
}
/* ... */

